--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -404,6 +404,9 @@ nav {
   align-items: center;
   justify-content: space-between; }
 
+.site-container {
+  overflow-x: hidden; }
+
 footer {
   background-color: #262228;
   color: #fff;
@@ -416,26 +419,19 @@ footer {
     box-sizing: border-box;
     padding: 20px; }
 
-.messages-container {
-  position: fixed;
-  width: 100%;
-  overflow: hidden;
-  height: 140px; }
-
 .messages-box {
-  position: absolute;
-  left: 0;
+  position: fixed;
   margin-left: auto;
   width: 70%;
   min-width: 200px;
   max-width: 400px;
-  min-height: 32px;
   text-align: center;
-  top: 40px;
   color: #fff;
   background-color: rgba(72, 14, 14, 0.78);
   padding: 5px;
+  min-height: 30px;
   z-index: 100;
+  top: 75px;
   transition-property: right;
   transition-duration: 2s; }
   .messages-box .container {
